[project]
name = "invest-system"
version = "0.1.0"
description = "Paper trading simulation with DeepSeek strategy and real market prices"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "yfinance>=0.2.40",
  "akshare>=1.15",
  "pandas>=2.0",
  "matplotlib>=3.8",
  "streamlit>=1.35",
  "apscheduler>=3.10",
]

[project.scripts]
invest-sim = "invest_system.cli:main"
invest-live-phase = "invest_system.live_phase:main"
invest-scheduler = "invest_system.scheduler:main"

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
